== 0.1.15 2009-01-08

Bugfix release

=== New features
* 한국어! (Korean!) (John Hwang)

=== Bugfixes
* Fix a minor bug in the console formatter's summary (David Chelimsky)
* Better quoting of Scenario names in Autotest (Peter Jaros)
* Added some small workarounds for unicode handling on Windows (Aslak Hellesøy)

== 0.1.14 2009-01-04

This is the first release of Cucumber that runs on Ruby 1.9. There are still some encoding-related issues 
with Arabic (ar), Japanese (ja) and Simplified Chinese (zh-CN). Patches are welcome. Other than that - 
a couple of minor bug fixes and polishing.

=== New features
* Pretty formatter shows number of scenarios (#139 Joseph Wilk)
* Rudimentary support for Ruby 1.9. Now it's ok to file Ruby 1.9-related bugs.

=== Bugfixes
* Fixed "No such file or directory -- cucumber (LoadError)" bug with AutoTest (Aslak Hellesøy)
* Fixed `load_missing_constant': uninitialized constant Dispatcher error with Rails (Aslak Hellesøy)

=== Removed features
* The #binary= method is gone from the Rake task. It will always point to the binary in the current gem. (Aslak Hellesøy)

== 0.1.13 2008-12-20

It's time for some new features again. Output is now much better since you can use diffing, tweak
the output colours and get the full --backtrace if you want. Managing your support/* files became 
a little easier since they are now always loaded before the step definitions. Life became easier 
for Windows users in Norway (and other countries using unicode in the features). Plus several other 
bug fixes.

Enjoy!

=== New features
* Console output is no longer bold, but regular. Step arguments are bold instead of blold+underlined. (Aslak Hellesøy)
* Console output can be configured with CUCUMBER_COLORS in your shell. (Aslak Hellesøy)
* Added new --backtrace option to show full backtrace (Aslak Hellesøy)
* Enable RSpec's diffing automatically if RSpec is loaded (Aslak Hellesøy)